# Object-oriented-Software-Design

Spartanmind-win/levels/: level1.xml  level2.xml  level3.xml
design3/: Blog System.vpp  Duncan's Toy Chest.vpp
design4/: Ice Bucket Challenge.vpp  MSU Annnual Hackathon.vpp  The Nonsense Example.vpp
design5/: Digital Video Recorder.vpp  Spartan Invitational Clown Car Competition.vpp  The Litwick Candle Shop.vpp  Washington Metropolitan Area Transit Authority.vpp
project1/: CMakeLists.txt  GameApp.cpp  GameApp.h  Main.cpp  pch.h
project1/GameLib/: CMakeLists.txt  Chest.cpp  Chest.h  Container.cpp  Container.h  DrawVisitor.cpp  DrawVisitor.h  Game.cpp  Game.h  GameObj.cpp  GameObj.h  GameView.cpp  GameView.h  GameWord.cpp  GameWord.h  Given.cpp  Given.h  HeadButtVisitor.cpp  HeadButtVisitor.h  Item.cpp  Item.h  ItemVisitor.h  Letter.cpp  Letter.h  LevelLoader.cpp  LevelLoader.h  MainFrame.cpp  MainFrame.h  Player.cpp  Player.h  PopUpWindow.cpp  PopUpWindow.h  Scoreboard.cpp  Scoreboard.h  SolveVisitor.cpp  SolveVisitor.h  Sparty.cpp  Sparty.h  Tray.cpp  Tray.h  (+6 more)
project1/Tests/: CMakeLists.txt  EmptyTest.cpp  GameTest.cpp  ItemTest.cpp  LetterTest.cpp  LoadTest.cpp  VisitorTest.cpp  gtest_main.cpp
project1/levels/: level2.xml  level3.xml
project2/: Movie.anim
project2/CanadianExperienceLib/: Actor.h  Drawable.cpp  MachineDrawable.cpp  MachineDrawable.h  PictureFactory.cpp  PictureFactory.h  SpartyFactory.cpp  ViewEdit.cpp  ViewEdit.h
project2/MachineLib/: Bubble.cpp  Bubble.h  BubbleBlower.cpp  BubbleBlower.h  CMakeLists.txt  Component.cpp  Component.h  IMachineSystem.h  Machine.cpp  Machine.h  Machine1Factory.cpp  Machine1Factory.h  Machine2Factory.cpp  Machine2Factory.h  MachineSystem.cpp  MachineSystem.h  MachineSystemFactory.cpp  Motor.cpp  Motor.h  Polygon.h  Pulley.cpp  Pulley.h  RotationSink.cpp  RotationSink.h  RotationSource.cpp  RotationSource.h  Shape.cpp  Shape.h
step1/: Animal.cpp  Animal.h  Chicken.cpp  Chicken.h  Cow.cpp  Cow.h  Farm.cpp  Farm.h  Shark.cpp  Shark.h  main.cpp
step2/Aquarium/: CMakeLists.txt  main.cpp  pch.h
step2/Aquarium/AquariumLib/: Aquarium.cpp  Aquarium.h  AquariumView.cpp  AquariumView.h  CMakeLists.txt  Item.cpp  Item.h  MainFrame.cpp  MainFrame.h  pch.h
step2/Aquarium/AquariumTest/: AquariumTest.cpp  CMakeLists.txt  ItemTest.cpp  gtest_main.cpp
step2/CameronMSchwindaman/: App.cpp  App.h  CMakeLists.txt  main.cpp  pch.h
step2/CameronMSchwindaman/CameronMSchwindamanLib/: CMakeLists.txt  LeftView.cpp  LeftView.h  MainFrame.cpp  MainFrame.h  RightView.cpp  RightView.h  pch.h
step3/Aquarium/: AquariumApp.cpp  AquariumApp.h  CMakeLists.txt
step3/Aquarium/AquariumLib/: Aquarium.cpp  Aquarium.h  AquariumView.cpp  AquariumView.h  (+13 more)
step5/city/: CityApp.cpp  CityApp.h  large.city  main.cpp  nice.city
step5/city/CityLib/: BuildingCounter.cpp  BuildingCounter.h  BuildingVisitor.cpp  BuildingVisitor.h  CMakeLists.txt  City.cpp  City.h  CityReport.cpp  CityReport.h  CityView.cpp  CityView.h  MainFrame.cpp  MainFrame.h  MemberReport.cpp  MemberReport.h  SlimedVisitor.cpp  SlimedVisitor.h  Tile.cpp  Tile.h  TileBuilding.cpp  TileBuilding.h  TileFirehouse.cpp  TileFirehouse.h  TileGarden.cpp  TileGarden.h  TileLandscape.cpp  TileLandscape.h  TileVisitor.h  TileWater.cpp  TileWater.h  TrapVisitor.cpp  TrapVisitor.h  ids.h
step6/canadian/: CanadianExperienceApp.cpp
(+97 files in other folders)
